--- a/PaginaWeb_Proy/est.css
+++ b/PaginaWeb_Proy/est.css
@@ -9,7 +9,7 @@
     text-align: center;
     padding: 10px;
 }
-footer {
+/*footer {
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -19,6 +19,12 @@ footer {
 footer a {
     color: #fff;
     text-decoration: none;
+}*/
+#inicio {
+    text-align: center;
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
 }
 #registro {
 text-align: center;
@@ -90,4 +96,39 @@ background-color: #f2f2f2;
 
 tr:hover {
 background-color: #f5f5f5;
+}
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.search-container {
+    display: flex;
+    align-items: center;
+}
+
+#search-input {
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+}
+
+button {
+    background-color: #073776;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+button img {
+    width: 20px;
+    height: 20px;
 }
