--- a/EventosMoTe/main.css
+++ b/EventosMoTe/main.css
@@ -4,13 +4,15 @@
 }
 
 body {
-    background-color: rgb(237, 241, 241);
+    background-color: rgb(189, 230, 230);
     width: 100%;
     height: 100vh;
     display: grid;
     place-items: center;
 }
-
+button{
+    background-color: rgb(145, 113, 175);
+}
 /* Estilos para cambiar de color */
 
 p {
@@ -18,7 +20,7 @@ p {
 }
 
 .parrafo-azul {
-    color: blue;
+    color: rgb(104, 104, 175);
     font-size: large;
 }
 
